0.4.17/_sources/gallery/update_console.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/update_console.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_update_console.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_update_console.py:


Update console
==============

Display one shapes layer ontop of one image layer using the add_shapes and
add_image APIs. When the window is closed it will print the coordinates of
your shapes.

.. tags:: historical

.. GENERATED FROM PYTHON SOURCE LINES 11-82



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gallery/images/sphx_glr_update_console_001.png
          :alt: update console
          :srcset: /gallery/images/sphx_glr_update_console_001.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/images/sphx_glr_update_console_002.png
          :alt: update console
          :srcset: /gallery/images/sphx_glr_update_console_002.png
          :class: sphx-glr-multi-img





.. code-block:: default


    import numpy as np
    from skimage import data
    import napari


    # create the viewer and window
    viewer = napari.Viewer()

    # add the image
    photographer = data.camera()
    image_layer = napari.view_image(photographer, name='photographer')

    # create a list of polygons
    polygons = [
        np.array([[11, 13], [111, 113], [22, 246]]),
        np.array(
            [
                [505, 60],
                [402, 71],
                [383, 42],
                [251, 95],
                [212, 59],
                [131, 137],
                [126, 187],
                [191, 204],
                [171, 248],
                [211, 260],
                [273, 243],
                [264, 225],
                [430, 173],
                [512, 160],
            ]
        ),
        np.array(
            [
                [310, 382],
                [229, 381],
                [209, 401],
                [221, 411],
                [258, 411],
                [300, 412],
                [306, 435],
                [268, 434],
                [265, 454],
                [298, 461],
                [307, 461],
                [307, 507],
                [349, 510],
                [352, 369],
                [330, 366],
                [330, 366],
            ]
        ),
    ]

    # add polygons
    shapes_layer = viewer.add_shapes(
        polygons,
        shape_type='polygon',
        edge_width=5,
        edge_color='coral',
        face_color='royalblue',
        name='shapes',
    )

    # Send local variables to the console
    viewer.update_console(locals())

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_update_console.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: update_console.py <update_console.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: update_console.ipynb <update_console.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
